CH-409: Ensure that new block rows are vertically aligned to the top.

--- a/modules/personalize_blocks/css/personalize_blocks.admin.css
+++ b/modules/personalize_blocks/css/personalize_blocks.admin.css
@@ -4,6 +4,7 @@
  */
 
 /* Handle large rows when adding new blocks */
-#personalized-block-variations table tr {
+#personalized-block-variations table tr,
+#personalized-block-variations table tr td {
   vertical-align: top;
 }
